backend/deployment.yaml
# apiVersion: v1
# kind: Namespace
# metadate:
#   name: django-slim

# ---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-kube
  # namespace: django-slim
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-slim-app
  template:
    metadata:
      labels:
        app: django-slim-app
    spec:
      containers:
        - image: ikegabriel/django-slim:fourth
          name: django-slim-kube
          imagePullPolicy: IfNotPresent
          # command: [ "/bin/bash", "-c", "--" ]
          # args: [ "while true; do sleep 30; done;" ]
          ports:
            - containerPort: 8000

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: django-slim-service
#   namespace: django-slim
# spec:
#   selector:
#     app: django-slim-app
#   ports:
#   - protocol: "TCP"
#     port: 8000
#     targetPort: 8000
#   type: LoadBalancer

# ---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: django-slim-ingress
#   namespace: django-slim
#   annotations:
#     kubernetes.io/ingress.class: nginx
# spec:
#   rules:
#   - host: "demo.example.com"
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/api/talent"
#         backend:
#           service:
#             name: django-slim-service
#             port:
#               number: 8000
