backend/django-slim-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-slim-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "django.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: django-app-kube
            port:
              number: 8000
